Fix broken css

--- a/src/css/window.css
+++ b/src/css/window.css
@@ -76,7 +76,7 @@ body:has(.window-footer) {
   /* 7.375rem is the distance of the left edge of the traffic control to the
    * very right edge of the window. 0.75rem is the spacing between the traffic
    * controls and other titlebar controls. */
-  padding-right: calc(calc(7.375rem + 0.75rem);
+  padding-right: calc(7.375rem + 0.75rem);
 }
 
 .macos .window-titlebar {
